--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "IglooAurora",
+  "name": "igloo-aurora",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://igloo.ooo",
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
+    "@material-ui/core": "^3.3.2",
     "@material-ui/lab": "^3.0.0-alpha.20",
     "apollo-client-preset": "^1.0.5",
     "apollo-link-ws": "^1.0.4",
