Working status bar

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "graphql-tag": "^2.6.1",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
+    "material-auto-rotating-carousel": "^2.1.0",
     "material-ui": "^0.20.0",
+    "material-ui-toggle-icon": "^1.0.2",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.17",
     "node-fetch": "^2.1.2",
