--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-detect-offline": "^1.0.6",
     "react-dom": "^16.6.0",
     "react-keyboard-shortcuts": "^1.1.3",
+    "react-moment": "^0.8.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0-rc.3",
     "react-scripts": "1.0.17",
