--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-detect-offline": "^1.0.6",
     "react-dom": "^16.6.0",
     "react-keyboard-shortcuts": "^1.1.3",
+    "react-konami-code": "^1.2.0",
     "react-moment": "^0.8.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0-rc.3",
@@ -47,7 +48,6 @@
   },
   "devDependencies": {
     "@hint/configuration-development": "^1.1.1",
-    "gh-pages": "^1.2.0",
     "hint": "^3.4.3"
   }
 }
