--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-detect-offline": "^1.0.6",
     "react-dom": "^16.6.0",
+    "react-helmet": "^5.2.0",
     "react-keyboard-shortcuts": "^1.1.3",
     "react-konami-code": "^1.2.0",
     "react-moment": "^0.8.2",
