--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.17",
     "node-fetch": "^2.1.2",
     "react": "^16.6.0",
+        "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-detect-offline": "^1.0.6",
