--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui-toggle-icon": "^1.0.2",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.17",
+    "nice-is-url": "^1.0.2",
     "node-fetch": "^2.1.2",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
