--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^3.0.0-alpha.20",
     "apollo-client-preset": "^1.0.5",
     "apollo-link-ws": "^1.0.4",
+    "clipboard-copy": "^2.0.1",
     "coloreact": "^0.2.4",
     "d3-scale": "^2.0.0",
     "d3-shape": "^1.2.0",
