--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Igloo Aurora",
-  "short_name": "Aurora",
+  "short_name": "Igloo Aurora",
   "theme_color": "#0057cb",
   "background_color": "#0057cb",
   "display": "standalone",
