--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://aurora.igloo.ooo",
   "dependencies": {
     "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.20",
     "apollo-client-preset": "^1.0.5",
     "apollo-link-ws": "^1.0.4",
