--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-keyboard-shortcuts": "^1.1.3",
     "react-konami-code": "^1.2.0",
     "react-moment": "^0.8.2",
+    "react-qr-reader": "^2.1.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.0-rc.3",
     "react-scripts": "1.0.17",
