--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "is-url": "^1.2.4",
+    "is-uuid": "^1.0.2",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "material-ui-toggle-icon": "^1.0.2",
