Unsecure mode in server dialog (WIP)

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "apollo-link-ws": "^1.0.4",
     "clipboard-copy": "^2.0.1",
     "coloreact": "^0.2.4",
+    "compare-urls": "^2.0.0",
     "d3-scale": "^2.0.0",
     "d3-shape": "^1.2.0",
     "email-validator": "^2.0.4",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "is-url": "^1.2.4",
