--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@devexpress/dx-react-chart": "^1.10.0",
     "@devexpress/dx-react-chart-material-ui": "^1.10.0",
     "@devexpress/dx-react-core": "^1.10.0",
-    "@material-ui/core": "^3.3.2",
+    "@material-ui/core": "^4.0.0-alpha.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.20",
     "apollo-client-preset": "^1.0.5",
@@ -31,7 +31,7 @@
     "moment-timezone": "^0.5.17",
     "nice-is-url": "^1.0.2",
     "node-fetch": "^2.1.2",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-copy-to-clipboard": "^5.0.1",
