Closes #45 - new email validator

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "compare-urls": "^2.0.0",
     "d3-scale": "^2.0.0",
     "d3-shape": "^1.2.0",
-    "email-validator": "^2.0.4",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "is-url": "^1.2.4",
     "is-uuid": "^1.0.2",
     "is-valid-url": "^1.0.1",
+    "isemail": "^3.2.0",
     "jsonwebtoken": "^8.1.0",
     "jwt-decode": "^2.2.0",
     "material-ui-toggle-icon": "^1.0.2",
